# ModelicaLanguageForPython

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  modelicalang-sphinx-apidoc  pyproject.toml  setup.py
.github/resources/: requirements.document.txt  requirements.test.txt
.github/workflows/: pages.yml  pylint.yml  pytest.yml
.pre-commit/: sphinx_apidoc.py
arpeggio-stubs/: __init__.pyi  export.pyi
bootstrap/: __main__.py  _ast_generator.py  _peg_syntax.py  _peg_visitor.py  _types.py  v2-2.modelicapeg  v2-2.original.modelicapeg  v3-4.modelicapeg  v3-4.original.modelicapeg  v3-5.modelicapeg  v3-5.original.modelicapeg
document/: conf.py  index.rst
document/apis/: modelica_language.rst  modelicalang.arpeggio_annotation.rst  modelicalang.exceptions.rst  modelicalang.rst  modelicalang.v3_4.rst  modelicalang.v3_5.rst  modules.rst
future/: _ast_generator.py  _peg_syntax.py  _peg_visitor.py  _types.py  test_future.py
modelica_language/: __init__.py  _backend.py  _parser.py  exceptions.py  typing.py  util.py  v3_4.py
modelica_language/_parser/: __init__.py  _backport.py  peg_syntax.py  peg_visitor.py
modelica_language/parsers/: regex.py
modelica_language/parsers/ast/: base_class.py
modelica_language/parsers/syntax/: __init__.py  _class_definition.py  _component_clause.py  _equations.py  _expressions.py  _extends.py  _future.py  _keyword.py  _lexical.py  _modification.py  _stored_definition.py
modelica_language/syntax/: __init__.py  v3-4.original.peg  v3-4.peg  v3_4.py
modelica_language/types/: README.md  __init__.py  abc.py  array.py  array2.py  primitive.py  size.py
modelica_language/typing/: __init__.py
modelicalang/: __init__.py  _backend.py  arpeggio_annotation.py  exceptions.py  v2_2.py  v3_4.py  v3_5.py
modelicalang/parsers/syntax/: __init__.py  _class_definition.py  _keyword.py  _modification.py  _stored_definition.py
new_feature/syntax/: v3-4.peg
pegs/: v3-4.peg
source/: conf.py  index.rst
test_feature/: parser.py  test_1st.py
test_feature/syntax/: __init__.py  v3-4.original.peg  v3-4.peg
tests/: __init__.py  conftest.py  test_arpeggio_extension.py  test_modelica_compliance.py  test_modelica_version.py  test_new_parser.py  test_parser.py  utils.py
