[tool.poetry]
name = "ModelicaLanguage"
version = "0.0.0a10"
description = "Modelica parser and class representation for Python"
repository = "https://github.com/ijknabla/ModelicaLanguageForPython"
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "modelica_language"},
]

[tool.poetry.dependencies]
python = "^3.6"
Arpeggio = ">=1.6"
typing-extensions = ">=3.7.4"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^0.0.1-alpha.2"
mypy = "^0.971"
pytest = "^6.2.5"
black = {version = "^22", python = ">=3.6.2"}
types-setuptools = "^57.4.11"
isort = "^5.8"
astunparse = {version = "^1.6.3", python = "<3.9"}
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
exclude = ".venv"
per-file-ignores = [
    "modelica_language/v?_?.py:E501"
]

[tool.isort]
profile = "black"
line_length = 79
