[tool.poetry]
name = "ModelicaLang"
version = "0.1.0a2.dev0"
description = "Modelica parser and class representation for Python"
repository = "https://github.com/ijknabla/ModelicaLanguageForPython"
documentation = "https://ijknabla.github.io/ModelicaLanguageForPython/"
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "modelicalang"},
]

[tool.poetry.dependencies]
python = "^3.7"
Arpeggio = ">=0.8"

[tool.poetry.group.dev.dependencies]
astunparse = {version = "^1.6.3", python = "<3.9"}
black = "^23.2"
isort = "^5.11"

[tool.poetry.group.document.dependencies]
sphinx = {version = "^7.2", python = ">=3.9"}
sphinx-autobuild = {version = "^2021.3.14", python = ">=3.9"}
sphinx-rtd-theme = {version = "^1.3", python = ">=3.9"}
pygments-modelicapeg-plugin = {git = "https://github.com/ijknabla/pygments-modelicapeg-plugin.git", rev = "main", python = ">=3.9"}

[tool.poetry.group.lint.dependencies]
mypy = "^1.4"
pyproject-flake8 = "^3.9"
types-setuptools = "^68.2"
types-arpeggio = {git = "https://github.com/ijknabla/types-arpeggio.git", rev = "main"}

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.flake8]
exclude = ".venv"
per-file-ignores = [
    "modelicalang/v?_?.py:E501,F403,F405"
]

[tool.isort]
profile = "black"
line_length = 79

[[tool.mypy.overrides]]
module = [
    "astunparse",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov --cov-branch --cov-report=term-missing"
